--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 header {
     width: 100%;
-    height: 90px;
+    height: 7em;
     margin: 0;
     top: 0;
     position: fixed;
@@ -17,7 +17,7 @@ header div {
     background-color: #222;
 }
 header i {
-    font-size: 90px;
+    font-size: 7em;
     position: fixed;
     color: white;
 }
@@ -70,6 +70,7 @@ footer {
     margin: 0;
     color: white;
     bottom: 0;
+    align-items: center;
 }
 footer section {
     width: 30%;
@@ -80,10 +81,12 @@ footer section {
     text-shadow: 3px 3px 3px #222;
     background: #222;
     font-size: 20px;
+    
 }
 footer a {
     color: white;
-    font-size: 23px;
+    font-size: 21px;
+    
 }
 footer > a > section :hover {
     background-color: black;
@@ -105,7 +108,6 @@ img {
     width: 25%;
 }
 a section {
-    padding-top: 70px;
     font-size: 46px;
     transition: 0.5;
 }
